--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
     workflow_dispatch: # allow manually triggering builds
 jobs:
     bluebuild:
-        runs-on: runs-on=${{ github.run_id }}/runner=8cpu-linux-x64/spot=true
+        runs-on: ubuntu-latest
         name: Build Custom Image
         permissions:
             contents: read
