--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -2,9 +2,9 @@
 type: dnf
 repos:
   copr:
-    - atim/ubuntu-fonts
-    - codifryed/CoolerControl
-    - ublue-os/akmods
+    - atim/ubuntu-fonts fedora-42-x86_64
+    - codifryed/CoolerControl fedora-42-x86_64
+    - ublue-os/akmods fedora-42-x86_64
   files:
     - charm.repo
     - google-chrome.repo
