chore: unprotect sudo to allow removing it

--- a/recipes/recipe-hyprland-cachy.yml
+++ b/recipes/recipe-hyprland-cachy.yml
@@ -6,6 +6,9 @@ base-image: quay.io/fedora-ostree-desktops/sway-atomic
 image-version: 42
 
 modules:
+  - type: script
+    scripts:
+      - unprotect_sudo.sh
   - from-file: hyprland-cachy/packages-deps.yml
   - from-file: hyprland-cachy/packages-kernel.yml
   - from-file: hyprland-cachy/packages-extra.yml
