--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -1,35 +1,38 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: dnf
 repos:
-  copr:
-    - atim/ubuntu-fonts
-    - codifryed/CoolerControl
-    - ublue-os/akmods
-  files:
-    - charm.repo
-    - google-chrome.repo
-    - https://repository.mullvad.net/rpm/stable/mullvad.repo
+    copr:
+        - name: atim/ubuntu-fonts
+          chroot: fedora-42-x86_64
+        - name: codifryed/CoolerControl
+          chroot: fedora-42-x86_64
+        - name: ublue-os/akmods
+          chroot: fedora-42-x86_64
+    files:
+        - charm.repo
+        - google-chrome.repo
+        - https://repository.mullvad.net/rpm/stable/mullvad.repo
 install:
-  packages:
-    - ubuntu-family-fonts
-    - openssh-askpass
-    - file-roller
-    - fastfetch
-    - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.4/webcord-4.10.4-1.x86_64.rpm
-    - gamemode
-    - glow
-    - google-chrome-stable
+    packages:
+        - ubuntu-family-fonts
+        - openssh-askpass
+        - file-roller
+        - fastfetch
+        - https://github.com/SpacingBat3/WebCord/releases/download/v4.10.4/webcord-4.10.4-1.x86_64.rpm
+        - gamemode
+        - glow
+        - google-chrome-stable
 
-    - lm_sensors
-    - liquidctl
-    - coolercontrol
-    - coolercontrold
-    - coolercontrol-liqctld
-    - mullvad
-    - openrgb-udev-rules
-    - openrgb
+        - lm_sensors
+        - liquidctl
+        - coolercontrol
+        - coolercontrold
+        - coolercontrol-liqctld
+        - mullvad
+        - openrgb-udev-rules
+        - openrgb
 
 optfix:
-  - google
-  - Mullvad VPN
-  - mullvad
+    - google
+    - Mullvad VPN
+    - mullvad
