--- a/recipes/hyprland-cachy/packages-kernel.yml
+++ b/recipes/hyprland-cachy/packages-kernel.yml
@@ -1,19 +1,20 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: dnf
 repos:
-  copr:
-    - bieszczaders/kernel-cachyos-dev
+    copr:
+        - name: bieszczaders/kernel-cachyos-dev
+          chroot: fedora-42-x86_64
 install:
-  packages:
-    - kernel-cachyos-lto
-    - kernel-cachyos-lto-modules
-    - kernel-cachyos-lto-devel-matched
-    - kernel-cachyos-lto-nvidia-open
-    - akmods
+    packages:
+        - kernel-cachyos-lto
+        - kernel-cachyos-lto-modules
+        - kernel-cachyos-lto-devel-matched
+        - kernel-cachyos-lto-nvidia-open
+        - akmods
 remove:
-  packages:
-    - kernel
-    - kernel-core
-    - kernel-modules
-    - kernel-modules-core
-    - kernel-modules-extra
+    packages:
+        - kernel
+        - kernel-core
+        - kernel-modules
+        - kernel-modules-core
+        - kernel-modules-extra
