--- a/recipes/recipe-hyprland-cachy.yml
+++ b/recipes/recipe-hyprland-cachy.yml
@@ -2,23 +2,24 @@
 name: celestial-hyprland-cachy
 description: A custom image of Fedora and Hyprland with personal modifications.
 
-base-image: quay.io/fedora-ostree-desktops/sway-atomic
+# base-image: quay.io/fedora-ostree-desktops/sway-atomic
+base-image: ghcr.io/secureblue/sericea-nvidia-open-hardened
 image-version: 42
 
 modules:
-  - type: script
-    scripts:
-      - unprotect_sudo.sh
-      - remove_sudo.sh
-  - from-file: hyprland-cachy/packages-deps.yml
-  - from-file: hyprland-cachy/packages-kernel.yml
-  - from-file: hyprland-cachy/packages-extra.yml
-  - from-file: hyprland-cachy/nvidia.yml
-  - from-file: hyprland/packages.yml
-  - from-file: hyprland/hyprland-scripts.yml
-  - from-file: common/packages-extra.yml
-  - from-file: common/fonts.yml
-  - from-file: common/files.yml
-  - from-file: common/chezmoi.yml
-  - from-file: hyprland-cachy/final-modules.yml
-  - type: signing
+    - type: script
+      scripts:
+          - unprotect_sudo.sh
+          - remove_sudo.sh
+    - from-file: hyprland-cachy/packages-deps.yml
+    - from-file: hyprland-cachy/packages-kernel.yml
+    - from-file: hyprland-cachy/packages-extra.yml
+    - from-file: hyprland-cachy/nvidia.yml
+    - from-file: hyprland/packages.yml
+    - from-file: hyprland/hyprland-scripts.yml
+    - from-file: common/packages-extra.yml
+    - from-file: common/fonts.yml
+    - from-file: common/files.yml
+    - from-file: common/chezmoi.yml
+    - from-file: hyprland-cachy/final-modules.yml
+    - type: signing
