--- a/recipes/recipe-hyprland-cachy.yml
+++ b/recipes/recipe-hyprland-cachy.yml
@@ -10,7 +10,6 @@ modules:
     - type: script
       scripts:
           - unprotect_sudo.sh
-          - remove_sudo.sh
     - from-file: hyprland-cachy/packages-deps.yml
     - from-file: hyprland-cachy/packages-kernel.yml
     - from-file: hyprland-cachy/packages-extra.yml
@@ -21,5 +20,6 @@ modules:
     - from-file: common/fonts.yml
     - from-file: common/files.yml
     - from-file: common/chezmoi.yml
+    - from-file: common/os-release.yml
     - from-file: hyprland-cachy/final-modules.yml
     - type: signing
