Enable Hyprland recipe in build workflow
Remove secureblue-logos from hyprland-cachy extras packages removal list

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
                     # - recipe-silverblue.yml
                     # - recipe-kinoite.yml
                     # - recipe-cosmic.yml
-                    # - recipe-hyprland.yml
+                    - recipe-hyprland.yml
                     - recipe-hyprland-cachy.yml
         steps:
             - name: Checkout repo
