chore: remove unused installation script and update package dependencies

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -81,5 +81,5 @@ install:
         - layer-shell-qt
         - sddm
 
-        - gtk4-layer-shell
-        - gtk4-layer-shell-devel
+        # Application launcher
+        - fuzzel
