--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -11,6 +11,8 @@ repos:
           chroot: fedora-42-x86_64
         - name: celestelove/celestial-linux-extras
           chroot: fedora-42-x86_64
+        - name: lihaohong/yazi
+          chroot: fedora-42-x86_64
 remove:
     packages:
         - dunst
@@ -55,9 +57,8 @@ install:
         - git-credential-libsecret
 
         # General utilities and file explorer
-        - pop-launcher
+        - yazi
         - nwg-look
-        - nautilus
 
         # Dependencies for Hyprland plugin manager:
         - cmake
