--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -7,6 +7,7 @@ image-version: 42
 
 modules:
   - from-file: hyprland/packages.yml
+  - from-file: hyprland/packages-extra.yml
   - from-file: common/packages-extra.yml
   - from-file: common/fonts.yml
   - from-file: common/packages-nvidia.yml
