--- a/recipes/hyprland-cachy/nvidia.yml
+++ b/recipes/hyprland-cachy/nvidia.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://schema.blue-build.org/module-list-v1.json
 # Copyright 2025 The Secureblue Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -9,7 +10,6 @@
 # Unless required by applicable law or agreed to in writing, software distributed under the License is
 # distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and limitations under the License.
-
 modules:
   - type: script
     scripts:
