feat(hyprland): add podman-compose to packages
Enable podman-compose so users can manage multi-container setups without Docker; this simplifies running docker-compose-compatible projects in the hyprland environment and improves local container-based development and testing workflows.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -57,6 +57,7 @@ install:
 
         # General utilities and file explorer
         - yazi
+        - podman-compose
         - nwg-look
         - mpv
         - neovim
