feat(packages): add funionfs to enable AppImage support
Include the FUSE-based union filesystem in the common extra packages so AppImage-based applications can mount and update without requiring users to install additional dependencies, reducing friction for portable app distribution.

--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -26,3 +26,6 @@ install:
         - coolercontrol-liqctld
         - openrgb-udev-rules
         - openrgb
+
+        # AppImage Support
+        - funionfs
