feat(hyprland): add hyprsunset to default packages
Include hyprsunset in the Hyprland package list to provide automatic sunset/sunrise color temperature adjustments out of the box, improving eye comfort and simplifying user setup by eliminating the need to install a separate color-temperature utility manually.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -36,6 +36,7 @@ install:
         - hyprpolkitagent
         - qalculate
         - hyprshot
+        - hyprsunset
 
         # XWayland
         - xorg-x11-server-Xwayland
