feat(hyprland): add tailscale VPN support
Enable Tailscale by adding the official Fedora repository, installing the tailscale package, and enabling the tailscaled systemd service so images built from the hyprland recipe can join Tailscale networks out of the box; include the common/systemd module to ensure the service enablement is applied as part of the recipe.

--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -10,6 +10,7 @@ repos:
           chroot: fedora-42-x86_64
     files:
         - charm.repo
+        - https://pkgs.tailscale.com/stable/fedora/tailscale.repo
 install:
     packages:
         - ubuntu-family-fonts
@@ -18,6 +19,7 @@ install:
         - fastfetch
         - gamemode
         - glow
+        - tailscale
 
         - lm_sensors
         - liquidctl
@@ -29,4 +31,3 @@ install:
 
         # MusicPresence
         - https://github.com/ungive/discord-music-presence/releases/download/v2.3.4/musicpresence-2.3.4-linux-x86_64.rpm
-
