--- a/recipes/common/systemd.yml
+++ b/recipes/common/systemd.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: systemd
-user:
+system:
   enabled:
-    - gamemoded.service
+    - tailscaled.service
