--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -14,6 +14,7 @@ repos:
 install:
     packages:
         - ubuntu-family-fonts
+        - google-roboto-fonts
         - openssh-askpass
         - file-roller
         - fastfetch
