feat(packages-extra): include waydroid in extra install list
Be mindful of added runtime dependencies and potential host-compatibility considerations when enabling Waydroid in CI and local environments.

--- a/recipes/common/packages-extra.yml
+++ b/recipes/common/packages-extra.yml
@@ -29,6 +29,7 @@ install:
         - coolercontrol-liqctld
         - openrgb-udev-rules
         - openrgb
+        - waydroid
 
         # MusicPresence
         - https://github.com/ungive/discord-music-presence/releases/download/v2.3.4/musicpresence-2.3.4-linux-x86_64.rpm
