feat(recipes): add hyprland-nvidia variants and extend CI build matrix
Introduce Nvidia-enabled Hyprland image variants by adding recipes for hyprland-nvidia and hyprland-cachy-nvidia and updating the CI workflow to build them. The changes isolate NVIDIA-specific packages into dedicated recipes rather than embedding them in the base images, enabling opt-in support and reducing cross-variant coupling. They also adjust the main hyprland and cachy recipes to use a non-NVIDIA hardened base, remove Nvidia-related modules, and tidy the YAML module blocks to preserve valid formatting.

--- a/recipes/recipe-hyprland-cachy-nvidia.yml
+++ b/recipes/recipe-hyprland-cachy-nvidia.yml
@@ -1,17 +1,21 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
-name: celestial-hyprland
+name: celestial-hyprland-cachy-nvidia
 description: A custom image of Fedora and Hyprland with personal modifications.
 
+# base-image: quay.io/fedora-ostree-desktops/sway-atomic
 base-image: ghcr.io/secureblue/sericea-main-hardened
 image-version: 42
 
 modules:
+    - from-file: hyprland-cachy/packages-deps.yml
+    - from-file: hyprland-cachy/packages-kernel.yml
+    - from-file: hyprland-cachy/packages-extra.yml
+    - from-file: hyprland-cachy/nvidia.yml
     - from-file: hyprland/packages.yml
-    - from-file: hyprland/packages-extra.yml
     - from-file: common/packages-extra.yml
     - from-file: common/fonts.yml
     - from-file: common/files.yml
-    - from-file: common/systemd.yml
     - from-file: common/chezmoi.yml
-    - from-file: common/final-modules.yml
+    - from-file: common/os-release.yml
+    - from-file: hyprland-cachy/final-modules.yml
     - type: signing
