--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,9 @@ jobs:
                     # - recipe-kinoite.yml
                     # - recipe-cosmic.yml
                     - recipe-hyprland.yml
+                    - recipe-hyprland-nvidia.yml
                     - recipe-hyprland-cachy.yml
+                    - recipe-hyprland-cachy-nvidia.yml
         steps:
             - name: Checkout repo
               uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
