--- a/recipes/recipe-hyprland-nvidia.yml
+++ b/recipes/recipe-hyprland-nvidia.yml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
-name: celestial-hyprland
+name: celestial-hyprland-nvidia
 description: A custom image of Fedora and Hyprland with personal modifications.
 
-base-image: ghcr.io/secureblue/sericea-main-hardened
+base-image: ghcr.io/secureblue/sericea-nvidia-open-hardened
 image-version: 42
 
 modules:
@@ -10,6 +10,7 @@ modules:
     - from-file: hyprland/packages-extra.yml
     - from-file: common/packages-extra.yml
     - from-file: common/fonts.yml
+    - from-file: common/packages-nvidia.yml
     - from-file: common/files.yml
     - from-file: common/systemd.yml
     - from-file: common/chezmoi.yml
