feat(recipes): introduce cachy-based image variants and CI support
Add cachy-specific dependency and kernel manifests and new image definitions (cosmic-cachy and cosmic-nvidia) and migrate Hyprland-Cachy to reuse cachy modules; remove Nvidia-related packages from the base cosmic image to isolate Nvidia content in its dedicated recipe; extend the build workflow to include the new cosmic variants and ensure they are built alongside existing images.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,9 @@ jobs:
                 recipe:
                     # - recipe-silverblue.yml
                     # - recipe-kinoite.yml
-                    # - recipe-cosmic.yml
+                    - recipe-cosmic.yml
+                    - recipe-cosmic-nvidia.yml
+                    - recipe-cosmic-cachy.yml
                     - recipe-hyprland.yml
                     - recipe-hyprland-nvidia.yml
                     - recipe-hyprland-cachy.yml
