--- a/recipes/recipe-cosmic-nvidia.yml
+++ b/recipes/recipe-cosmic-nvidia.yml
@@ -6,10 +6,11 @@ base-image: ghcr.io/secureblue/cosmic-nvidia-open-hardened
 image-version: 42
 
 modules:
-    - from-file: cosmic/packages.yml
-    - from-file: common/packages-extra.yml
-    - from-file: common/fonts.yml
-    - from-file: common/files.yml
-    - from-file: common/chezmoi.yml
-    - from-file: common/final-modules.yml
-    - type: signing
+  - from-file: cosmic/packages.yml
+  - from-file: common/packages-extra.yml
+  - from-file: common/fonts.yml
+  - from-file: common/packages-nvidia.yml
+  - from-file: common/files.yml
+  - from-file: common/chezmoi.yml
+  - from-file: common/final-modules.yml
+  - type: signing
