chore: enable fedora silverblue build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,8 @@ jobs:
             fail-fast: false # stop GH from cancelling all matrix builds if one fails
             matrix:
                 recipe:
-                    # - recipe-silverblue.yml
+                    - recipe-silverblue.yml
+                    - recipe-silverblue-nvidia.yml
                     # - recipe-kinoite.yml
                     - recipe-cosmic.yml
                     - recipe-cosmic-nvidia.yml
