--- a/recipes/recipe-cosmic-cachy.yml
+++ b/recipes/recipe-cosmic-cachy.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
-name: celestial-cosmic
+name: celestial-cosmic-cachy
 description: A custom image of Fedora and COSMIC Desktop with personal modifications.
 
 base-image: ghcr.io/secureblue/cosmic-main-hardened
