chore(fonts): migrate to google-fonts and remove ubuntu-fonts
standardize font provisioning by relying on Google Fonts to reduce external maintenance and improve consistency across environments; remove the COPR ubuntu-fonts repository and the ubuntu-family-fonts package, while adding google-fonts (Ubuntu, Roboto, OpenSans) and retaining nerd-fonts as fallback

--- a/recipes/common/fonts.yml
+++ b/recipes/common/fonts.yml
@@ -1,8 +1,11 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
 type: fonts
 fonts:
-  nerd-fonts:
-    - Agave
-    - SourceCodePro
-    - JetBrainsMono
-
+    google-fonts:
+        - Ubuntu
+        - Roboto
+        - OpenSans
+    nerd-fonts:
+        - Agave
+        - SourceCodePro
+        - JetBrainsMono
