--- a/recipes/common/final-modules.yml
+++ b/recipes/common/final-modules.yml
@@ -1,4 +1,2 @@
 # yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
-type: script
-scripts:
-  - regenerate_initramfs.sh
+type: initramfs
