--- a/recipes/hyprland-cachy/final-modules.yml
+++ b/recipes/hyprland-cachy/final-modules.yml
@@ -1,5 +1,6 @@
-# yaml-language-server: $schema=https://schema.blue-build.org/module-v1.json
-type: script
-scripts:
-  - regenerate_initramfs_cachy.sh
-  - sign_kernel.sh
+# yaml-language-server: $schema=https://schema.blue-build.org/module-list-v1.json
+modules:
+    - type: initramfs
+    - type: script
+      scripts:
+          - sign_kernel.sh
