chore: replace ags2 repository

--- a/recipes/recipe-hyprland.yml
+++ b/recipes/recipe-hyprland.yml
@@ -8,6 +8,7 @@ image-version: 43
 modules:
     - from-file: hyprland/packages.yml
     - from-file: hyprland/packages-extra.yml
+    - from-file: hyprland/packages-ags.yml
     - from-file: common/packages-extra.yml
     - from-file: common/fonts.yml
     - from-file: common/files.yml
