--- a/recipes/recipe-hyprland-cachy-nvidia.yml
+++ b/recipes/recipe-hyprland-cachy-nvidia.yml
@@ -12,6 +12,7 @@ modules:
     - from-file: hyprland-cachy/packages-extra.yml
     - from-file: hyprland-cachy/nvidia.yml
     - from-file: hyprland/packages.yml
+    - from-file: hyprland/packages-ags.yml
     - from-file: common/packages-extra.yml
     - from-file: common/fonts.yml
     - from-file: common/files.yml
