chore: fix nvidia build by disabling signatures for now

--- a/recipes/common/packages-nvidia.yml
+++ b/recipes/common/packages-nvidia.yml
@@ -3,6 +3,6 @@ type: dnf
 repos:
     files:
         - https://nvidia.github.io/libnvidia-container/stable/rpm/nvidia-container-toolkit.repo
-install:
-    packages:
-        - nvidia-container-toolkit
+# install:
+#     packages:
+#         - nvidia-container-toolkit
