chore(hyprland): replace wezterm with alacritty
Switching the default terminal to alacritty lets us rely on upstream packages without pulling from the wezterm nightly COPR, reducing external dependencies and aligning with a more stable terminal choice.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -4,8 +4,6 @@ repos:
     copr:
         - name: lionheartp/Hyprland
           chroot: fedora-43-x86_64
-        - name: wezfurlong/wezterm-nightly
-          chroot: fedora-43-x86_64
         - name: lihaohong/yazi
           chroot: fedora-43-x86_64
         - name: atim/starship
@@ -44,7 +42,7 @@ install:
         - hyprland-uwsm
 
         # Terminal
-        - wezterm
+        - alacritty
         - nu
         - starship
 
