chore(hyprland): update package selection for keyring support
Add gcr alongside libsecret components to support credential storage in the Hyprland environment and drop the extra terminal package to avoid bundling unused tools.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -42,7 +42,6 @@ install:
         - hyprland-uwsm
 
         # Terminal
-        - alacritty
         - nu
         - starship
 
@@ -50,6 +49,7 @@ install:
         - libsecret
         - gnome-keyring
         - git-credential-libsecret
+        - gcr
 
         # General utilities and file explorer
         - yazi
