feat(hyprland): include gui utilities package in install set
Include hyprland-guiutils in the Hyprland package set so users get the graphical utilities bundled by default instead of installing them separately.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -33,6 +33,7 @@ install:
         - qalculate
         - hyprshot
         - hyprsunset
+        - hyprland-guiutils
 
         # XWayland
         - wayland-protocols-devel
