--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -8,6 +8,8 @@ repos:
           chroot: fedora-43-x86_64
         - name: atim/starship
           chroot: fedora-43-x86_64
+        - name: celestelove/lidm
+          chroot: fedora-43-x86_64
 remove:
     packages:
         - dunst
@@ -35,6 +37,9 @@ install:
         - hyprshot
         - hyprsunset
         - hyprland-guiutils
+
+        # Session manager
+        - lidm
 
         # XWayland
         - wayland-protocols-devel
