chore(hyprland): include lidm-selinux dependency

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -40,6 +40,7 @@ install:
 
         # Session manager
         - lidm
+        - lidm-selinux
 
         # XWayland
         - wayland-protocols-devel
