feat(login)!: migrate to greetd with gtkgreet on Wayland
Switching to greetd with a lightweight Wayland greeter streamlines the login path for Hyprland setups and avoids relying on heavier display managers, improving consistency across minimal installations.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -39,8 +39,10 @@ install:
         - hyprland-guiutils
 
         # Session manager
-        - lidm
-        - lidm-selinux
+        - greetd
+        - greetd-selinux
+        - gtkgreet
+        - cage
 
         # XWayland
         - wayland-protocols-devel
