--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,16 +20,16 @@ jobs:
             fail-fast: false # stop GH from cancelling all matrix builds if one fails
             matrix:
                 recipe:
-                    - recipe-silverblue.yml
-                    - recipe-silverblue-nvidia.yml
+                    # - recipe-silverblue.yml
+                    # - recipe-silverblue-nvidia.yml
                     # - recipe-kinoite.yml
-                    - recipe-cosmic.yml
-                    - recipe-cosmic-nvidia.yml
-                    - recipe-cosmic-cachy.yml
+                    # - recipe-cosmic.yml
+                    # - recipe-cosmic-nvidia.yml
+                    # - recipe-cosmic-cachy.yml
                     - recipe-hyprland.yml
                     - recipe-hyprland-nvidia.yml
-                    - recipe-hyprland-cachy.yml
-                    - recipe-hyprland-cachy-nvidia.yml
+                    # - recipe-hyprland-cachy.yml
+                    # - recipe-hyprland-cachy-nvidia.yml
         steps:
             - name: Checkout repo
               uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
