feat(greetd): add optional Hyprland-based gtkgreet session
Prepare an alternative greetd session that launches gtkgreet under Hyprland, enabling easier experimentation or migration away from cage while keeping the current default behavior unchanged.

--- a/files/system/etc/greetd/config.toml
+++ b/files/system/etc/greetd/config.toml
@@ -2,6 +2,7 @@
 vt = 1
 
 [default_session]
+# command = "hyprland-run -c /etc/greetd/hyprland.conf"
 command = "cage -s -- gtkgreet"
 user = "greetd"
 
