--- a/files/system/etc/greetd/config.toml
+++ b/files/system/etc/greetd/config.toml
@@ -2,7 +2,7 @@
 vt = 1
 
 [default_session]
-# command = "hyprland-run -c /etc/greetd/hyprland.conf"
-command = "cage -s -- gtkgreet"
+command = "start-hyprland -- -c /etc/greetd/hyprland.conf"
+#command = "cage -s -- gtkgreet"
 user = "greetd"
 
