--- a/files/system/etc/greetd/hyprland.conf
+++ b/files/system/etc/greetd/hyprland.conf
@@ -1,5 +1,13 @@
-monitor = ,preferred,auto,1
 bind = ALT, Q, killactive,
+
+general {
+  gaps_in = 0
+  gaps_out = 0
+}
+
+debug {
+  enable_stdout_logs = false
+}
 
 misc {
     force_default_wallpaper = 0
