--- a/recipes/recipe-hyprland-nvidia.yml
+++ b/recipes/recipe-hyprland-nvidia.yml
@@ -9,6 +9,7 @@ modules:
     - from-file: hyprland/remove-sudo.yml
     - from-file: hyprland/packages.yml
     - from-file: hyprland/packages-ags.yml
+    - from-file: hyprland/post-scripts.yml
     - from-file: common/packages-extra.yml
     - from-file: common/fonts.yml
     - from-file: common/packages-nvidia.yml
