fix(hyprland): drop hardened_malloc to prevent compositor issues
Hyprland can misbehave when paired with hardened_malloc, so remove it from the Hyprland recipe to avoid instability and keep the default allocator for better compatibility.

--- a/recipes/hyprland/packages.yml
+++ b/recipes/hyprland/packages.yml
@@ -15,6 +15,7 @@ remove:
         - dunst
         - sway
         - swaylock
+        - hardened_malloc
 install:
     packages:
         # Hyprland
